replaced list creations with List.of()
there is no need to creat mutable lists in tests to only get elements